--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "@types/socket.io-client": "^3.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
+    "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
