--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "hammerjs": "^2.0.8",
+    "redis": "^4.0.4",
     "rxjs": "~6.4.0",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
