--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/socket.io-client": "^3.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "firebase-admin": "^10.0.2",
     "hammerjs": "^2.0.8",
     "redis": "^4.0.4",
     "rxjs": "~6.4.0",
